--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -8,7 +8,7 @@
   top: 0%;
   z-index: 1;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
-  background-color: white;
+  background-color: rgb(73, 122, 120);
 
   /* Just for mockup */
 }
@@ -20,9 +20,12 @@
 #nav-link-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 60%;
+  height: 100%;
   max-width: 400px;
   margin-right: 5%;
 }
 .nav-link {
+    font-size: calc(1vh + 2vw);
 }
