slideshows made a little more responsive

--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -2,16 +2,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
-}
-#AboutMe-scroll-anchor {
-  height: 10%;
-  width: 100%;
- 
 }
 #AboutMe-body {
-    display: flex;
-    align-items: center;
-  height: 90%;
-  
+    position: relative;
+    top: 5vh;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
