--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -4,12 +4,19 @@
   display: flex;
   align-items: center;
   height: 100vh;
+  margin-bottom: 50vh;
+}
+
+#Contact-scroll-anchor {
+    position: relative;
+    top: -50vh
 }
 
 #contact-info {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 40vh;
+  height: 20vh;
   font-size: 1.5em;
+  
 }
