--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,7 @@ body, #root {
   width: 100%;
   height: auto;
   margin: 0%;
-
+ 
   /* All things centered and placed along vertical axis */
   display: flex;
   flex-direction: column;
@@ -17,4 +17,5 @@ body, #root {
 
 .text {
     color: white;
+    opacity: 0.9;
 }
