--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 
 body, #root {
  
-  width: 100%;
+  width: 100% !important;
   height: auto;
   margin: 0%;
  
@@ -12,10 +12,50 @@ body, #root {
 
   /* Just for mockup */
   text-align: center;
-  background-color: black;
+  background-color: rgb(35, 61, 65);
 }
 
 .text {
     color: white;
     opacity: 0.9;
 }
+
+.downArrow {
+    position: relative;
+    margin-top: 1.5vh;
+    -webkit-animation: pulsate-bck 1s ease-in-out infinite both;
+	        animation: pulsate-bck 1s ease-in-out infinite both;
+}
+
+#downArrow2 {
+}
+
+@-webkit-keyframes pulsate-bck {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    50% {
+      -webkit-transform: scale(0.9);
+              transform: scale(0.9);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  @keyframes pulsate-bck {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    50% {
+      -webkit-transform: scale(0.9);
+              transform: scale(0.9);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  
