--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -3,10 +3,19 @@
   justify-content: center;
   align-items: center;
 }
+
+#AboutMe-scroll-anchor {
+    height: 4vh;
+}
 #AboutMe-body {
-    position: relative;
-    top: 5vh;
+  position: relative;
+  top: 4vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: 100vh;
+}
+
+#AboutMe-title {
+    margin: 1vh;
 }
