--- a/src/css/Intro.css
+++ b/src/css/Intro.css
@@ -1,12 +1,12 @@
 #Intro {
-    
   position: relative;
-  top: -8vh;
+  top: -7vh;
   flex-direction: column;
+  justify-content: space-around;
 }
 
 #Intro-scroll-anchor {
-  height: 20vh;
+  height: 1vh;
   margin-bottom: 5vh;
 }
 
@@ -14,48 +14,61 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  height: 40%;
+  height: 20%;
   word-wrap: break-word;
 }
 
 #intro-pic {
   width: 40%;
   max-width: 200px;
-  margin-bottom: 2vh;
-  border: rgb(73, 122, 120) 8px solid;
+  border: rgb(136, 114, 71) 8px solid;
   border-radius: 50%;
 }
 
 #intro-name,
 #intro-desc {
+  font-size: 1.8em;
   margin: 0;
+}
+#intro-subdesc {
+  margin: 2vh;
+  font-size: 0.9em;
 }
 
 .intro-paragraph {
   max-width: 530px;
-  margin-bottom: 2vh;
+  margin-bottom: 1.5vh;
 }
 
 #social-links {
   display: flex;
   flex-direction: column;
+  position: relative;
+  top: 2vh;
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: 35%;
 }
 
 .social-links-row {
   display: flex;
   justify-content: space-evenly;
-  height: 40%;
   width: 100%;
   max-width: 1000px;
 }
 
-.icon {
-    width: 10%;
-    height: 100%;
-    background-color: red;
+.icon-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 10%;
+  color: white;
+  text-decoration: none;
 }
+
+.icon {
+  width: 100%;
+  max-width: 50px;
+}
+
