--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,16 +1,28 @@
 #Projects {
   flex-direction: column;
+
   height: auto;
 }
 #Projects-scroll-anchor {
-  
+    height: 2vh;
   width: 100%;
-  background-color: royalblue;
 }
 #Projects-body {
-    position: relative;
-    top: 10vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  top: 3vh;
   height: auto;
-  width: 100%;
- 
 }
+
+#projects-title {
+    font-size: 3em;
+    margin: 0;
+}
+
+.project-category {
+    margin-top: 4vh;
+}
+
