--- a/src/css/Slideshow.css
+++ b/src/css/Slideshow.css
@@ -1,14 +1,23 @@
 .carousel {
-   width: 100vw !important;
-   max-width: 80vh !important;
-
-  
+  overflow: visible !important;
+  max-width: calc(25vh + 20vw);
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 
 .slide {
   background-color: transparent !important;
   opacity: 0.7;
-  height: 100%;
+  
+  
 }
 
-
+.control-arrow {
+}
+.control-prev {
+  position: relative;
+  left: -27.5% !important;
+}
+.control-next {
+  position: relative;
+  left: 115.5% !important;
+}
