--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -2,10 +2,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  overflow: hidden !important;
 }
 
 #AboutMe-scroll-anchor {
-    height: 4vh;
+    height: 3vh;
 }
 #AboutMe-body {
   position: relative;
