--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -1,60 +1,47 @@
 #Nav {
   position: sticky;
+  position: -webkit-sticky;
+  top: 0%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  min-height: 40px;
-
-  top: 0%;
-  z-index: 1;
-  box-shadow: 5px 0px 10px 5px rgba(0, 0, 0, 0.4),
-    inset 0px 0px 8px 4px rgba(0, 0, 0, 0.2), 0px 0px 5px 5px rgba(0, 0, 0, 0.6);
-  background-color: rgb(29, 51, 51);
-
-  /* Just for mockup */
+  height: 45px;
+  background-color: rgb(45, 95, 93);
+  box-shadow: inset 0px 0px 3px 2px rgba(0, 0, 0, 0.5),
+    0px 0px 8px 1px rgba(0, 0, 0, 0.5);
+  z-index: 3;
+  
+  
 }
 
-#logo-container{
-    margin-top: 0.5vh;
-    width:20%;
-    max-width: 100px;
-    margin-right: 15%;
+#logo-container {
+  height: 70%;
 }
+
 #logo {
-  margin-left: 15px;
-width: 100%;
-  min-height: 30px;
-  opacity: 0.8;
+  height: 100%;
+  margin-left: 8px;
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.5);
 }
-
 
 #nav-link-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  flex-grow: 1;
-  min-width: 100px;
-  max-width: 500px;
-  margin-right: 15px;
+  height: 100%;
+  width: 80%;
+  font-size: calc(1.3vh + 1vw);
 }
+
 .nav-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 20px;
-  margin-left: 10px;
-  flex-grow: 1;
-  font-size: calc(1vh + 1vw);
-  border-radius: 6%;
-  color: rgba(199, 209, 209, 0.835) !important;
-  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.4);
-  background-color: rgba(60, 77, 77, 0.616);
+  height: 60%;
+  margin-right: 4%;
+  padding-left: 2%;
+  padding-right: 2%;
+  background-color: rgba(32, 54, 58, 0.609);
+  box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.513);
 }
-.nav-link:hover {
-  color: rgba(160, 167, 167, 0.835) !important;
-  background-color: rgba(50, 68, 68, 0.616);
-}
-
-
-
