--- a/src/css/Slideshow.css
+++ b/src/css/Slideshow.css
@@ -1,18 +1,26 @@
 .carousel {
   overflow: visible !important;
-  max-width: calc(25vh + 20vw);
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  max-width: calc(30vh + 10vw);
 }
 
 .slide {
+  border: 10px solid transparent;
   background-color: transparent !important;
-  opacity: 0.7;
-  
+  -webkit-animation: fade-out 1s ease-out both;
+  animation: fade-out 1s ease-out both;
+  box-shadow: 0px 0px 60px 35px rgba(0, 0, 0, 0.2);
+}
+
+.selected {
+    box-shadow: 0px 0px 60px 35px rgba(0, 0, 0, 0.2);
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+.slider-wrapper {
+  overflow: visible !important;
   
 }
 
-.control-arrow {
-}
 .control-prev {
   position: relative;
   left: -27.5% !important;
@@ -20,4 +28,40 @@
 .control-next {
   position: relative;
   left: 115.5% !important;
+}
+
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0.1;
+    
+  }
+  100% {
+    opacity: 1;
+  
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.1;
+  }
+}
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.1;
+  }
 }
