--- a/src/css/Slideshow.css
+++ b/src/css/Slideshow.css
@@ -9,11 +9,13 @@
   -webkit-animation: fade-out 1s ease-out both;
   animation: fade-out 1s ease-out both;
   box-shadow: 0px 0px 60px 35px rgba(0, 0, 0, 0.2);
+  z-index: 2;
 }
 
 .selected {
     box-shadow: 0px 0px 60px 35px rgba(0, 0, 0, 0.2);
   animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  z-index: 3;
 }
 
 .slider-wrapper {
