--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -1,23 +1,25 @@
 #AboutMe {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  overflow: hidden !important;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	
+	overflow: hidden !important;
 }
 
 #AboutMe-scroll-anchor {
-    height: 3vh;
+	height: 3vh;
 }
 #AboutMe-body {
-  position: relative;
-  top: 4vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
+	position: relative;
+	top: 4vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100vh;
 }
 
 #AboutMe-title {
-    margin: 1vh;
+	margin: 1vh;
+	z-index: 1;
 }
