--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -3,7 +3,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	
+
 	overflow: hidden !important;
 }
 
@@ -16,7 +16,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 100vh;
+	height: 100%;
 }
 
 #AboutMe-title {
