--- a/src/css/Intro.css
+++ b/src/css/Intro.css
@@ -2,6 +2,7 @@
 	position: relative;
 	flex-direction: column;
 	justify-content: space-around;
+
 	top: -4vh;
 	max-height: 90vh;
 }
@@ -11,10 +12,11 @@
 	margin-bottom: 5vh;
 }
 
-#intro-container {
+.intro-container {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	word-wrap: break-word;
 }
 
@@ -24,6 +26,7 @@
 	border: rgba(202, 166, 34, 0.8) 8px solid;
 	box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.2);
 	border-radius: 50%;
+	margin-bottom: 1vh;
 }
 
 #intro-name,
@@ -37,9 +40,11 @@
 }
 
 .intro-paragraph {
+	width: 90%;
 	max-width: 530px;
-	margin-top: 1.5vh;
+	margin-top: 1vh;
 	margin-bottom: 0.5vh;
+	font-size: calc(1.2vh + 1vw);
 }
 
 #social-links {
