--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -1,25 +1,30 @@
 #AboutMe {
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-height: 100vh;
-	overflow-x: hidden;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 #AboutMe-scroll-anchor {
-	height: 3vh;
+    height: 3vh;
 }
-#AboutMe-body {
-	position: relative;
-	top: 4vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 
+#AboutMe-body {
+    position: relative;
+    top: 4vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #AboutMe-title {
-	margin: 1vh;
-	z-index: 1;
+    margin: 1vh;
+    z-index: 1;
+}
+
+#downArrow2 {
+    position: relative;
+    top: -10vh;
 }
