--- a/src/css/Intro.css
+++ b/src/css/Intro.css
@@ -1,80 +1,83 @@
 #Intro {
-	position: relative;
-	flex-direction: column;
-	justify-content: space-around;
-
-	top: -4vh;
-	max-height: 90vh;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-around;
+    max-height: 80vh;
 }
 
 #Intro-scroll-anchor {
-	height: 1vh;
-	margin-bottom: 5vh;
+    height: 2vh;
+    margin-bottom: 40px;
 }
 
 .intro-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	word-wrap: break-word;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    word-wrap: break-word;
 }
 
 #intro-pic {
-	width: 35%;
-	max-width: 200px;
-	border: rgba(202, 166, 34, 0.8) 8px solid;
-	box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.2);
-	border-radius: 50%;
-	margin-bottom: 1vh;
+    width: 35%;
+    max-width: 200px;
+    border: rgba(202, 166, 34, 0.8) 8px solid;
+    box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+    margin-bottom: 1vh;
 }
 
 #intro-name,
 #intro-desc {
-	font-size: 1.5em;
-	margin: 0;
+    font-size: 1.5em;
+    margin: 0;
 }
+
 #intro-subdesc {
-	margin: 1vh;
-	font-size: 0.9em;
+    margin: 1vh;
+    font-size: 0.9em;
 }
 
 .intro-paragraph {
-	width: 90%;
-	max-width: 530px;
-	margin-top: 1vh;
-	margin-bottom: 0.5vh;
-	font-size: calc(1.2vh + 1vw);
+    width: 90%;
+    max-width: 700px;
+    margin-top: 1vh;
+    margin-bottom: 0.5vh;
+    font-size: calc(1.2vh + 1vw);
 }
 
 #social-links {
-	display: flex;
-	flex-direction: column;
-	position: relative;
-
-	justify-content: space-around;
-	align-items: center;
-	width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
 }
 
 .social-links-row {
-	display: flex;
-	justify-content: space-evenly;
-	width: 100%;
-	max-width: 1000px;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    max-width: 1000px;
 }
 
 .icon-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	width: 10%;
-	color: white;
-	text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 3vh;
+    width: 10%;
+    color: white;
+    text-decoration: none;
 }
 
 .icon {
-	width: 100%;
-	max-width: 50px;
+    width: 100%;
+    max-width: 50px;
+}
+
+#downArrow1 {
+    margin-top: 5vh;
 }
