--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,31 +1,38 @@
 #Projects {
-  flex-direction: column;
-  height: auto;
+    flex-direction: column;
+    height: auto;
+    overflow: hidden;
+    width: 100vw;
+    padding-bottom: 20vh;
+}
 
-  overflow: hidden;
-  width: 100vw;
-  padding-bottom: 20vh;
-}
 #Projects-scroll-anchor {
-  height: 3vh;
+    height: 3vh;
 }
+
 #Projects-body {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-  top: 3vh;
-  
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    top: 3vh;
 }
 
 #projects-title {
-  font-size: 3em;
-  margin: 0;
+    font-size: 3em;
 }
 
 .project-category {
-  margin: 0;
-  margin-top: 4vh;
-  margin-bottom: 1vh;
+    margin: 0;
+    margin-top: 4vh;
+    margin-bottom: 1vh;
+}
+
+#downArrow3,
+#downArrow4,
+#downArrow5,
+#downArrow6 {
+    position: relative;
+    margin-top: 8vh;
 }
