--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,64 +1,67 @@
 body,
 #root {
-	width: 100vw !important;
-
-	height: auto;
-	margin: 0%;
-
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-
-	text-align: center;
-	-webkit-font-smoothing: antialiased;
-	text-rendering: optimizeLegibility;
-	background-color: rgb(35, 61, 65);
-	background-image: url("../images/background-texture.png");
+    width: 100vw !important;
+    height: auto;
+    margin: 0%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    background-color: rgb(35, 61, 65);
+    background-image: url("../images/background-texture.png");
 }
 
 body::-webkit-scrollbar {
-	display: none;
+    display: none;
 }
 
 .text {
-	color: white;
-	opacity: 0.9;
-	z-index: 3;
+    color: white;
+    opacity: 0.9;
+    z-index: 3;
 }
 
 .downArrow {
-	position: relative;
-	margin-top: 3vh;
-	z-index: 0;
-	-webkit-animation: pulsate-bck 1s ease-in-out infinite both;
-	animation: pulsate-bck 1s ease-in-out infinite both;
+    position: relative;
+    z-index: 0;
+    -webkit-animation: pulsate-bck 1s ease-in-out infinite both;
+    animation: pulsate-bck 1s ease-in-out infinite both;
+}
+
+#downArrow7 {
+    position: relative;
+    top: -10vh;
+    z-index: 5;
 }
 
 @-webkit-keyframes pulsate-bck {
-	0% {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-	50% {
-		-webkit-transform: scale(0.9);
-		transform: scale(0.9);
-	}
-	100% {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+    50% {
+        -webkit-transform: scale(0.9);
+        transform: scale(0.9);
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
 }
+
 @keyframes pulsate-bck {
-	0% {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-	50% {
-		-webkit-transform: scale(0.9);
-		transform: scale(0.9);
-	}
-	100% {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+    50% {
+        -webkit-transform: scale(0.9);
+        transform: scale(0.9);
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
 }
