--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -3,8 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    height: 85vh;
 }
 
 #AboutMe-scroll-anchor {
@@ -26,5 +25,5 @@
 
 #downArrow2 {
     position: relative;
-    top: -10vh;
+    margin-top: 2vh;
 }
