--- a/src/css/Intro.css
+++ b/src/css/Intro.css
@@ -1,5 +1,6 @@
 #Intro {
     position: relative;
+    top: -10vh;
     flex-direction: column;
     justify-content: space-around;
     max-height: 80vh;
@@ -78,5 +79,6 @@
 }
 
 #downArrow1 {
-    margin-top: 6vh;
+    position: relative;
+    top: -5vh;
 }
