--- a/src/css/Intro.css
+++ b/src/css/Intro.css
@@ -1,6 +1,6 @@
 #Intro {
     position: relative;
-    top: -10vh;
+    top: -50px;
     flex-direction: column;
     justify-content: space-around;
     max-height: 80vh;
