--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -1,46 +1,50 @@
 #Nav {
-	position: sticky !important;
-	position: -webkit-sticky;
-	top: 0%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 100%;
-	height: 45px;
-	background-color: rgb(42, 83, 82);
-	background-image: url("../images/background-texture.png");
-	border-bottom: 1px solid rgb(0, 0, 0, 0.5);
-	z-index: 3;
+    position: sticky !important;
+    position: -webkit-sticky;
+    top: 0%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+    background-color: rgb(42, 83, 82);
+    background-image: url("../images/background-texture.png");
+    border-bottom: 1px solid rgb(0, 0, 0, 0.5);
+    z-index: 3;
 }
 
 #logo-container {
-	height: 70%;
+    height: 70%;
 }
 
 #logo {
-	height: 100%;
-	margin-left: 8px;
-	box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.5);
+    height: 100%;
+    margin-left: 8px;
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.5);
 }
 
 #nav-link-container {
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	height: 100%;
-	width: 100%;
-	max-width: 600px;
-	font-size: calc(1vh + 1vw);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    max-width: 600px;
+    font-size: calc(1vh + 1vw);
 }
 
 .nav-link {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 60%;
-	margin-right: 4%;
-	padding-left: 2%;
-	padding-right: 2%;
-	background-color: rgba(32, 54, 58, 0.609);
-	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.513);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60%;
+    margin-right: 4%;
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: rgba(32, 54, 58, 0.609);
+    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.513);
+}
+
+.nav-link:hover {
+    background-color: rgba(32, 54, 58, 0);
 }
