--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,9 +1,10 @@
 #Projects {
     flex-direction: column;
     height: auto;
-    overflow: hidden;
     width: 100vw;
+    margin-top: -5vh;
     padding-bottom: 20vh;
+    overflow: hidden;
 }
 
 #Projects-scroll-anchor {
@@ -19,19 +20,38 @@
     top: 3vh;
 }
 
-#projects-title {
-    font-size: 3em;
+.slide-title {
+    font-size: calc(2vw + 2vh);
+    padding-bottom: 5px;
 }
 
 .project-category {
+    margin-top: 4vh;
+    margin-bottom: 2vh;
+    font-size: calc(2.5vh + 2.2vw);
+}
+
+.project-gitlink,
+.project-link {
+    position: relative;
+    color: white;
+    font-size: calc(1vw + 1vh);
+    text-decoration: none;
     margin: 0;
-    margin-top: 2vh;
-    margin-bottom: 1vh;
+    top: -15px;
+    background: rgba(0, 0, 0, 0.144);
+    width: 40%;
+    border: 2px solid black;
+    border-radius: 5%;
 }
 
 .project-link {
-    color: white;
-    font-size: 2em;
+    top: -5px;
+}
+
+.project-gitlink:hover,
+.project-link:hover {
+    background: rgba(131, 131, 131, 0.151);
 }
 
 #downArrow3,
@@ -39,5 +59,4 @@
 #downArrow5,
 #downArrow6 {
     position: relative;
-    margin-top: 5vh;
 }
