--- a/src/css/Slideshow.css
+++ b/src/css/Slideshow.css
@@ -1,70 +1,122 @@
 .carousel {
-	overflow: visible !important;
-	max-width: calc(35vh + 10vw);
-	
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: visible !important;
+    max-width: calc(40vh + 10vw);
+    min-height: 60vh;
+}
+
+.carousel-slider {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: visible !important;
+    max-width: calc(40vh + 10vw);
+    min-height: 60vh;
 }
 
 .slide {
-	border: 10px solid transparent;
-	background-color: transparent !important;
-	-webkit-animation: fade-out 1s ease-out both;
-	animation: fade-out 1s ease-out both;
-	box-shadow: 0px 0px 60px 35px rgba(0, 0, 0, 0.2);
-	z-index: 2;
-	opacity: 0.05;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5%;
+    border: 10px solid rgba(0, 0, 0, 0.205);
+    background-color: transparent !important;
+    -webkit-animation: fade-out 1s ease-out both;
+    animation: fade-out 1s ease-out both;
+    box-shadow: 0px 0px 60px 35px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+    opacity: 0.05;
 }
 
+.slide img {
+    margin-top: 10px;
+    max-width: 60%;
+}
 
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#AboutMe .slide img {
+    max-width: 100%;
+}
+
+.slide-title {
+    margin: 0.5vh;
+}
+
+.slide-text {
+    min-height: 30px;
+    width: 90%;
+    font-size: calc(2vh + 0.2vw);
+    margin: 0.5vh;
+}
 
 .selected {
-	box-shadow: 0px 0px 60px 35px rgba(0, 0, 0, 0.2);
-	animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-	z-index: 3;
+    box-shadow: 0px 0px 60px 35px rgba(0, 0, 0, 0.2);
+    animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+    z-index: 3;
 }
 
 .slider-wrapper {
-	overflow: visible !important;
+    overflow: visible !important;
 }
 
 .control-prev {
-	position: relative;
-	left: -27.5% !important;
+    position: relative;
+    height: 10%;
+    top: 45% !important;
+    left: -10% !important;
+    background-color: rgba(95, 143, 128, 0.25) !important;
 }
+
 .control-next {
-	position: relative;
-	left: 115.5% !important;
+    float: left;
+    height: 10%;
+    top: 45% !important;
+    right: -10% !important;
+    background-color: rgba(95, 143, 128, 0.25) !important;
 }
 
 @-webkit-keyframes fade-in {
-	0% {
-		opacity: 0.05;
-	}
-	100% {
-		opacity: 1;
-	}
+    0% {
+        opacity: 0.05;
+    }
+    100% {
+        opacity: 1;
+    }
 }
+
 @keyframes fade-in {
-	0% {
-		opacity: 0.05;
-	}
-	100% {
-		opacity: 1;
-	}
+    0% {
+        opacity: 0.05;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes fade-out {
-	0% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0.05;
-	}
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.05;
+    }
 }
+
 @keyframes fade-out {
-	0% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0.05;
-	}
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.05;
+    }
 }
