--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -4,28 +4,29 @@
     align-items: center;
     width: 100%;
     height: 100vh;
+    margin-top: 10vw;
     overflow: hidden;
 }
 
 #AboutMe-scroll-anchor {
-    height: 3vh;
+    height: 4vh;
 }
 
 #AboutMe-body {
     position: relative;
-    top: 4vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 20px;
 }
 
 #AboutMe-title {
-    margin: 1vh;
+    position: relative;
+    margin: 20px 0 0 0;
     z-index: 1;
+    font-size: calc(2.5vh + 2.2vw);
 }
 
 #downArrow2 {
     position: relative;
-    top: -8vh;
-    margin-top: 3vh;
 }
