--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -2,6 +2,7 @@
     flex-direction: column;
     height: auto;
     width: 100vw;
+    padding-top: 30px;
     padding-bottom: 20vh;
     overflow: hidden;
 }
@@ -52,5 +53,5 @@
 #downArrow5,
 #downArrow6 {
     position: relative;
-    margin: 10px 0 50px 0;
+    margin: 10px 0 30px 0;
 }
